# arbitrage-x

./: .gitignore  CMakeLists.txt  Design_Document_C++_Stack.md  Dockerfile  Makefile  Network_Routing_Analyzer_PRD.md  PROJECT_REPORT.md  docker-compose.yml  drizzle.config.ts  network_routing_analyzer_tech_stack.md  package-lock.json  package.json  render.yaml  visualize_graph.py  visualize_metrics.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: AlgorithmsPage.tsx  App.tsx  AuthContext.tsx  Dashboard.tsx  GraphPage.tsx  LoginPage.tsx  TradePage.tsx  WalletPage.tsx  index.css
include/: algorithms.h  binary_heap.h  fibonacci_heap.h  graph.h
results/: dashboard.html  scaling_results.csv
src/: arbitrage.cpp  bellman_ford.cpp  dijkstra_binary.cpp  dijkstra_fibonacci.cpp  floyd_warshall.cpp  main.cpp  server.js
src/db/: schema.ts
src/lib/: auth.ts  db.ts
tests/: test_bellman_ford.cpp  test_dijkstra.cpp  test_fibonacci.cpp  test_floyd_warshall.cpp  test_graph.cpp
